Add privacy note and GitHub link to the description section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 		<div class="container">
 			<h1 class="title">A4 to A3</h1>
 			<p class="description">
-				このツールは、A4サイズのPDFの2ページ分を、1枚のA3用紙に並べて配置した新しいPDFを作成します。
+				このツールは、A4サイズのPDFの2ページ分を、1枚のA3用紙に並べて配置した新しいPDFを作成します。<br />
+				<span class="privacy-note">※PDFファイルは外部サーバー等に送信されず、このブラウザ内だけで処理されます。</span>
 			</p>
+			<div class="github-link-top">
+				<a href="https://github.com/Hashory/A4toA3" target="_blank" rel="noopener noreferrer" class="github-link">
+					<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="github-icon" />
+					<span>GitHubでソースを見る</span>
+				</a>
+			</div>
 			<div class="hint-box">
 				<h2 class="hint-title">💡 コンビニ印刷のヒント</h2>
 				<p>A3サイズは、A4サイズを2枚並べたサイズです。</p>
