Update biome and format code
- Upgrade Biome schema version to 2.0.6 in biome.json
- Update package.json to use @biomejs/biome version 2.0.6
- Format .html, .css and .ts files

--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
 		<div class="container">
 			<h1 class="title">A4 to A3</h1>
 			<p class="description">
-				このツールは、A4サイズのPDFの2ページ分を、1枚のA3用紙に並べて配置した新しいPDFを作成します。<br />
-				<span class="privacy-note">※PDFファイルは外部サーバー等に送信されず、このブラウザ内だけで処理されます。</span>
+				このツールは、A4サイズのPDFの2ページ分を、1枚のA3用紙に並べて配置した新しいPDFを作成します。
+				<br>
+				<span class="privacy-note"
+					>※PDFファイルは外部サーバー等に送信されず、このブラウザ内だけで処理されます。</span
+				>
 			</p>
 			<div class="github-link-top">
-				<a href="https://github.com/Hashory/A4toA3" target="_blank" rel="noopener noreferrer" class="github-link">
-					<img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="github-icon" />
+				<a
+					href="https://github.com/Hashory/A4toA3"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="github-link"
+				>
+					<img
+						src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+						alt="GitHub"
+						class="github-icon"
+					>
 					<span>GitHubでソースを見る</span>
 				</a>
 			</div>
@@ -25,7 +37,7 @@
 				<p>A3サイズは、A4サイズを2枚並べたサイズです。</p>
 				<p>
 					コンビニのマルチコピー機では、A4用紙2枚を印刷するよりも、A3用紙1枚を印刷する方が料金が安くなる場合が多いです。
-					<br />
+					<br>
 					※2025年4月現在
 				</p>
 				<div class="table-scroll">
@@ -81,7 +93,7 @@
 					accept=".pdf"
 					class="file-input"
 					required
-				/>
+				>
 			</div>
 
 			<div class="form-group">
@@ -94,7 +106,7 @@
 							type="radio"
 							value="single"
 							checked
-						/>
+						>
 						<label for="print-single">片面印刷</label>
 					</div>
 					<div class="radio-item">
@@ -103,7 +115,7 @@
 							name="print-setting"
 							type="radio"
 							value="double-long"
-						/>
+						>
 						<label for="print-double-long">両面印刷（A4 長辺とじ）</label>
 					</div>
 					<div class="radio-item">
@@ -112,7 +124,7 @@
 							name="print-setting"
 							type="radio"
 							value="double-short"
-						/>
+						>
 						<label for="print-double-short">両面印刷（A4 短辺とじ）</label>
 					</div>
 				</div>
