Add Vite configuration and update dependencies
- Introduce vite.config.ts for sitemap generation
- Add vite-plugin-sitemap to package.json
- Include @types/node as a development dependency
- Format meta tag in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="google-site-verification" content="ZLatOGFlJDcAyP3LJeRpdapIxF1pQCS4sCcUkhjKWbs" />
+		<meta
+			name="google-site-verification"
+			content="ZLatOGFlJDcAyP3LJeRpdapIxF1pQCS4sCcUkhjKWbs"
+		>
 		<meta name="msvalidate.01" content="E22C1602D7393293AD1E6C1FBF381229" />
 		<title>A4toA3 - PDF変換</title>
 		<link rel="stylesheet" href="src/style.css" />
